5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_1183.log
== TEST (2019-05-21 21:55:04) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:55:23) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:08:43) 
-- CODE:
s = input("Digite uma string: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:09:06) 
-- CODE:
s = input("Digite uma string: ")
print(-len(s))
-- OUTPUT:
-34
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:09:13) 
-- CODE:
s = input("Digite uma string: ")
print(-len(s))
-- OUTPUT:
-34
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:09:57) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
-- OUTPUT:
]1,01-,9-,8-,7-,6-,5-,4-,3-,2-,1-[
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:10:23) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
-- OUTPUT:
]1,01-,9-,8-,7-,6-,5-,4-,3-,2-,1-[
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:11:56) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
-- OUTPUT:
]1,01-,9-,8-,7-,6-,5-,4-,3-,2-,1-[
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:58:44) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
-- OUTPUT:
]1,01-,9-,8-,7-,6-,5-,4-,3-,2-,1-[
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:58:48) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
-- EXECUTION TIME:
0.190095
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
]1,01-,9-,8-,7-,6-,5-,4-,3-,2-,1-[
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
]5,4-,3,1-,2[
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
]6-,52,41,23,81,1-[
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:23:32) 
-- CODE:
a=array([2,3,4])
print(size(a))
print(len(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array([2,3,4])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:23:38) 
-- CODE:
a=array([2,3,4])
print(size(a))
print(len(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array([2,3,4])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:23:58) 
-- CODE:
from numpy import *
a=array([2,3,4])
print(size(a))
print(len(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:37:12) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:37:36) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:46:37) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))
b = array(5)
print(len(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:46:47) 
-- CODE:
from numpy import *
#a=array(eval(input('digite:  ')))
b = array(5)
print(len(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:48:47) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))
qtd_pos=0
i=0
while(i<= size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:49:39) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))
qtd_pos=0
i=0
while(i<= size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i=i+1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:50:26) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))
qtd_pos=0
i=0
while(i< size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i=i+1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:50:37) 
-- CODE:
from numpy import *
a=array(eval(input('digite:  ')))
qtd_pos=0
i=0
while(i< size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i=i+1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:09:29) 
-- CODE:
from numpy import *
a=array(eval(input('digite:[]  ')))
b=array([])
while(i)
qtd_pos=0
i=0
while(i< size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i=i+1
b=zeros(qtd_pos,dtype=int)
x=0
y=o
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
else:
	x=x+1
print(b)
		
-- ERROR:
File "XXXX", line 4
    while(i)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:17) 
-- CODE:
from numpy import *
a=array(eval(input('digite:[]  ')))
b=array([])
pos_pos=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos+=1
		i+=1
	else:
		i+=1
print(a)
		#while(i< size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i=i+1
b=zeros(qtd_pos,dtype=int)
x=0
y=o
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
else:
	x=x+1
print(b)
		
-- ERROR:
File "XXXX", line 13
    if(a[i]>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:37) 
-- CODE:
from numpy import *
a=array(eval(input('digite:[]  ')))
b=array([])
pos_pos=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos+=1
		i+=1
	else:
		i+=1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:02) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
pos_pos=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos+=1
		i+=1
	else:
		i+=1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:28) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
pos_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos+=1
		i+=1
	else:
		i+=1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:16:15) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qdt_pos_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos+=1
		i+=1
	else:
		i+=1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:16:23) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qdt_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos+=1
		i+=1
	else:
		i+=1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:17:40) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:18:30) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
print(a)
b=zeros(qtd_pos,type=int)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:22:33) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
print(b)
b= o
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:22:50) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:23:09) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:23:10) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:23:28) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:25:24) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:25:37) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<len(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
0.501444
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:31:39) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
0.339707
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:31:41) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:06) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
0.478711
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:32:19) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x1111
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:23) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x1111
print(b)

-- EXECUTION TIME:
0.985703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 21, in <module>
    x=x1111
NameError: name 'x1111' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:24) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x1111
print(b)

-- EXECUTION TIME:
1.5794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 21, in <module>
    x=x1111
NameError: name 'x1111' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:36) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
1.18438
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:43) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
1.56489
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
digite o vetor de notas:  [1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
digite o vetor de notas:  [2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite o vetor de notas:  [18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:43) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
2.31652
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
digite o vetor de notas:  [2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite o vetor de notas:  [18 32 14 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:32:43) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
2.34482
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
digite o vetor de notas:  [2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite o vetor de notas:  [18 32 14 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:33:27) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
1.14808
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:39:02) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x
print(b)

-- EXECUTION TIME:
406.872
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:31) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>=0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:54) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:04:07) 
-- CODE:
from numpy import *
a=array(eval(input('digite o vetor de notas:  ')))
b=array([])
qtd_pos=0
i=0
while(i<size(a)):
	if(a[i]>0):
		qtd_pos=qtd_pos+1
		i=i+1
	else:
		i+=1
b = arange(qtd_pos)
x=0
y=0
while(x<len(a)):
	if(a[x]>0):
		b[y]=a[x]
		y=y+1
		x=x+1
	else:
		x=x+1
print(b)

-- EXECUTION TIME:
0.379946
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
